--- a/CSS/lesson02/index.html
+++ b/CSS/lesson02/index.html
@@ -5,72 +5,210 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index_media.css">
     <title>Document</title>
 </head>
 
 <body>
     <div id="wrap">
         <!-- header -->
-        <header>
-            <div class="logo">
-                <h1><a href="#">My portfolio</a></h1>
-            </div>
-
-            <nav>
-                <ul>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">PORTFOLIO</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                </ul>
-            </nav>
-        </header>
-        <!-- main -->
-        <article>
-            <div class="main">
-                <h3>Inspire width heart</h3>
+        <div id="headerWrap">
+            <header>
+                <h1><a href="#">My Portfolio</a></h1>
+                <!-- nav -->
+                <nav>
+                    <h2 class="hide">메인내비게이션</h2>
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Content</a></li>
+                    </ul>
+                    <!-- <p class="close">
+                        close
+                    </p> -->
+                </nav>
+                <!-- nav btn -->
+                <p id="btn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </p>
+            </header>
+        </div>
+        <!-- box01 -->
+        <div id="box01">
+            <article>
+                <h3>Inspire with heart</h3>
                 <ul>
                     <li>
-                        <span><img src="./images/header_icon_01.png" alt="header_img alt"></span>
+                        <span></span>
                         <dl>
                             <dt>MY STORY</dt>
                             <dd>design is what you make of it <br> photoshop illustrotor <br> html css jQuery</dd>
                         </dl>
                     </li>
                     <li>
-                        <span><img src="./images/header_icon_02.png" alt="header_img alt"></span>
+                        <span></span>
                         <dl>
-                            <dt>DESIGN</dt>
-                            <dd>hyundai offcial site main <br> nike korea site main <br> illustrotor</dd>
+                            <dt>MDESIGN</dt>
+                            <dd>design is what you make of it <br> photoshop illustrotor <br> html css jQuery</dd>
                         </dl>
                     </li>
                     <li>
-                        <span><img src="./images/header_icon_03.png" alt="header_img alt"></span>
+                        <span></span>
                         <dl>
                             <dt>CODING</dt>
-                            <dd>guess officail site main <br> hyundai offical site main <br> sk cm mobile site main</dd>
+                            <dd>design is what you make of it <br> photoshop illustrotor <br> html css jQuery</dd>
                         </dl>
                     </li>
                 </ul>
-            </div>
-        </article>
-        <!-- About -->
-        <article>
-            <h3>aubout</h3>
-            
-        </article>
-        <!-- Protfolio -->
-        <article>
-
-        </article>
-        <!-- contact -->
-        <article>
-
-        </article>
+            </article>
+        </div>
+        <!-- box02 -->
+        <div id="box02">
+            <article>
+                <h3>about</h3>
+                <section id="info">
+                    <h4>
+                        <img src="images/header_pic.png" alt="나의 이름">
+                    </h4>
+                    <ul>
+                        <li>
+                            <dfn>Name</dfn>
+                            <span>lee 아무개</span>
+                        </li>
+                        <li>
+                            <dfn>Birth</dfn>
+                            <span>2020.**.**</span>
+                        </li>
+                        <li>
+                            <dfn>Residence</dfn>
+                            <span>Seoul Korea</span>
+                        </li>
+                        <li>
+                            <dfn>Mafor</dfn>
+                            <span>Web Design / Publishing</span> <br>
+                            <span>photoshop, Illustrator, Html, CSS, Javascript, jQuery</span>
+                        </li>
+                    </ul>
+                </section>
+                <section id="skill">
+                    <h4>SKILLS</h4>
+                    <ul>
+                        <li>
+                            <dfn>Photoshop</dfn>
+                            <span>80%</span>
+                        </li>
+                        <li>
+                            <dfn>Illustrator</dfn>
+                            <span>75%</span>
+                        </li>
+                        <li>
+                            <dfn>html / css</dfn>
+                            <span>95%</span>
+                        </li>
+                        <li>
+                            <dfn>javascript</dfn>
+                            <span>80%</span>
+                        </li>
+                        <li>
+                            <dfn>jQuery</dfn>
+                            <span>85%</span>
+                        </li>
+                    </ul>
+                </section>
+            </article>
+        </div>
+        <!-- box03 -->
+        <div id="box03">
+            <article>
+                <h3>Portfolio</h3>
+                <ul>
+                    <li><a href="#">tabmenu01</a></li>
+                    <li><a href="#">tabmenu02</a></li>
+                    <li><a href="#">tabmenu03</a></li>
+                </ul>
+                <div id="show">
+                    <div id="all">
+                        <figure>
+                            <img src="images/pic01.png" alt="작품명">
+                            <figcaption>title01</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/pic02.png" alt="작품명">
+                            <figcaption>title02</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/pic03.png" alt="작품명">
+                            <figcaption>title03</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/pic04.png" alt="작품명">
+                            <figcaption>title04</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/pic01.png" alt="작품명">
+                            <figcaption>title05</figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/pic02.png" alt="작품명">
+                            <figcaption>title06</figcaption>
+                        </figure>
+                    </div>
+                </div>
+                <div class="left">left</div>
+                <div class="right">right</div>
+                <!-- <aside id="modal"></aside> -->
+            </article>
+        </div>
+        <!-- box04 -->
+        <div id="box04">
+            <article>
+                <h3>Contact</h3>
+                <form action="#" method="post">
+                    <fieldset>
+                        <legend class="hide">contact</legend>
+                        <ul>
+                            <li>
+                                <label for="userName">Name</label>
+                                <input type="text" id="userName" placeholder="Name">
+                            </li>
+                            <li>
+                                <label for="userEmail">Email</label>
+                                <input type="text" id="userEmail" placeholder="Email">
+                            </li>
+                            <li>
+                                <label for="userPhone">Phone</label>
+                                <input type="text" id="userPhone" placeholder="Phone">
+                            </li>
+                            <li>
+                                <label for="userMessage">Messages</label>
+                                <textarea id="userMessage" placeholder="Message"></textarea>
+                            </li>
+                        </ul>
+                        <p><input type="submit" value="submit"></p>
+                    </fieldset>
+                </form>
+            </article>
+        </div>
+        <!-- <aside>
+            <h4 class="hide">서브메뉴</h4>
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">portfolio</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </aside> -->
         <!-- footer -->
-        <footer>
+        <div id="footerWrap">
+            Copyright &copy; 2020 My Portfolio by chamchi all right reserved
+        </div>
 
-        </footer>
     </div>
 </body>
 
